// engine_rpc_service.proto
syntax = "proto3";

option java_package = "org.flexlb.engine.grpc";

// Status version for worker status queries
message StatusVersionPB {
  int64 latest_finished_version = 2;
}

message CacheVersionPB {
  int64 latest_cache_version = 1;
  bool need_cache_keys = 2;
}

// Cache status information
message CacheStatusPB {
  int64 available_kv_cache = 1;
  int64 total_kv_cache = 2;
  int64 block_size = 3;
  int64 version = 4;
  map<int64, bool> cache_keys = 5;
}

// Task information
message TaskInfoPB {
  int64 request_id = 1;
  int64 inter_request_id = 2;
  int64 prefix_length = 3;
  int64 input_length = 4;
  int64 waiting_time_ms = 5;
  int64 iterate_count = 6;
  int64 end_time_ms = 7;
  int64 dp_rank = 8;
}

// Worker status response
message WorkerStatusPB {
  string role = 1;
  int64 available_concurrency = 2;
  repeated TaskInfoPB running_task_info = 3;
  repeated TaskInfoPB finished_task_list = 4;
  int64 waiting_query_len = 5;
  int64 running_query_len = 6;
  double step_latency_ms = 7;
  int64 iterate_count = 8;
  int64 dp_size = 9;
  int64 tp_size = 10;
  int64 version = 11;
  int64 status_version = 12;
  bool alive = 13;
  string precision = 14;
}

// Service definition
service RpcService {
    rpc GetWorkerStatus(StatusVersionPB) returns (WorkerStatusPB);
    rpc GetCacheStatus(CacheVersionPB) returns (CacheStatusPB);
}